--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -58,7 +58,29 @@ body::before {
   /* to allow view components to control their own layout */
 }
 
-a {
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(5px);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+a,
+.green {
   text-decoration: none;
   color: var(--color-primary);
   transition: 0.4s;
